dataset1235/2025-2/805158916/users/2311811032/executions/2118643220_1092214117.log
== RUN (2025-09-01 15:13:16)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 

gasto = quntidade * pedagio

aumento = gasto * (15/100)

total_1 = total + aumento

print(round(total_1, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:32:09)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + 1 (15 // 100)

print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 // 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 // 100)
                   ^^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 // 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 // 100)
                   ^^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 // 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 // 100)
                   ^^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 // 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 // 100)
                   ^^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 // 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 // 100)
                   ^^^^^^^^^^^^^
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:13:18)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 

gasto = quntidade * pedagio

aumento = gasto * (15/100)

total_1 = total + aumento

print(round(total_1, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:02:44)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

total = quntidade * pedagio


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
5
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:08:39)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 

total = quntidade * pedagio

aumento = total + (15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
529.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
59.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
549.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
588.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
519.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:33:09)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quantidade * pedagio

total = gasto * (1 + 15/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5102.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5171.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5308.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
568.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:25:54)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (1 + 15/100) 

toatal = gasto + aumento

print(round(toatal, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5192.21
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
564.07
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5320.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5576.63
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
5128.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:37:38)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80

taxa = 20.00

gasto = quantidade * pedagio

total = gasto * (1 + 15/100)

total_1 = total + taxa

print(round(total_1, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
553.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
531.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
576.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5121.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
542.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:32:57)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (1 + (15 / 100))

print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:55:02)
-- CODE: 
# Pedágio de uma Rodovia

# 1 Entrada
quantidade = int(input('5'))

# 2 Comando

# 2.1 Pedágio em cada peça 
pedagio = 9.80

# 2.2 Taxa fixa da manutenção das estradas
taxa = 20.00

# 2.3 Total gasto
gasto = (quantidade * pedagio) + 20.00

# 2.4 Almento de 15% do ICMS sobre o tatal gasto
total = gasto * (1 + 15/100)

# 3 Saída
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
556.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
579.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
545.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:33:37)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quantidade + pedagio

total = gasto * (1 + 15/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
537.72
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
535.42
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
540.02
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
544.62
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
536.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:30:09)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (15 // 100)

print(round, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:39:59)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80

taxa = 20.00

gasto = (quantidade * pedagio) + 20.00

total = gasto * (1 + 15/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
556.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
579.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
545.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:08:50)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 

total = quntidade * pedagio

aumento = total + (1 + 15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
530.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
510.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
550.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
589.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
520.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:51:49)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (1 + 15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1090.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1030.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10150.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10269.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1060.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:54:52)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total (15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:39:57)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80

taxa = 20.00

gasto = (quantidade * pedagio) + 20.00

total = gasto * (1 + 15/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
556.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
579.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
545.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:04:49)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

total = quntidade * pedagio

aumento = total + (15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
589.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
529.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5149.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5268.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
559.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:37:43)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80

taxa = 20.00

gasto = quantidade * pedagio

total = gasto * (1 + 15/100)

total_1 = total + taxa

print(round(total_1, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
553.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
531.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
576.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5121.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
542.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:58:00)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.00

total = qunatidade * pedagio

icms = total (15 / 100) 

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:08:51)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 

total = quntidade * pedagio

aumento = total + (1 + 15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
530.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
510.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
550.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
589.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
520.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:32:58)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (1 + (15 / 100))

print(round, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:33:05)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (1 + 15 / 100)

print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:52:02)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1089.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1029.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10149.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10268.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1059.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:31:30)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (1 + 15 // 100)

print(round, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:13:41)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (15/100)

total_1 = total + aumento

print(round(total_1, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:31:17)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (1 + (15 // 100))

print(round, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:05:03)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

total = quntidade * pedagio

aumento = total + (1 + 15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
590.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
530.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5150.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5269.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
560.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:29:47)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (15 // 100)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:25:53)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (1 + 15/100) 

toatal = gasto + aumento

print(round(toatal, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5192.21
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
564.07
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5320.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5576.63
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
5128.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:08:41)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 

total = quntidade * pedagio

aumento = total + (15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
529.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
59.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
549.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
588.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
519.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:34:52)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quantidade * pedagio

total = gasto * (1 + 15/100)

total_1 = gasto + total

print(round(total_1, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5192.21
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
564.07
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5320.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5576.63
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
5128.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:05:02)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

total = quntidade * pedagio

aumento = total + (1 + 15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
590.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
530.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5150.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5269.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
560.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:57:59)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.00

total = qunatidade * pedagio

icms = total (15 / 100) 

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100) 
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:13:40)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (15/100)

total_1 = total + aumento

print(round(total_1, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total_1 = total + aumento
              ^^^^^
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:54:37)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + 1 (15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 / 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 / 100)
                   ^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 / 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 / 100)
                   ^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 / 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 / 100)
                   ^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 / 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 / 100)
                   ^^^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
XXXX:7: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  icms = total + 1 (15 / 100)
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total + 1 (15 / 100)
                   ^^^^^^^^^^^^
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:31:16)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (1 + (15 // 100))

print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:22:46)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (15/100) 

toatal = gasto + aumento

print(round(toatal, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5102.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5171.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5308.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
568.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:14:22)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (15/100)

total_1 = gasto + aumento

print(round(total_1, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5102.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5171.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5308.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
568.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:34:53)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quantidade * pedagio

total = gasto * (1 + 15/100)

total_1 = gasto + total

print(round(total_1, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5192.21
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
564.07
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5320.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5576.63
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
5128.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:33:08)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quantidade * pedagio

total = gasto * (1 + 15/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5102.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5171.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5308.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
568.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:55:16)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total (15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:14:21)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (15/100)

total_1 = gasto + aumento

print(round(total_1, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5102.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5171.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5308.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
568.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:30:08)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (15 // 100)

print(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:37:37)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80

taxa = 20.00

gasto = quantidade * pedagio

total = gasto * (1 + 15/100)

total_1 = total + taxa

print(round(total_1, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
553.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
531.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
576.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5121.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
542.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:33:06)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (1 + 15 / 100)

print(round, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0<built-in function round> 2
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0<built-in function round> 2
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0<built-in function round> 2
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0<built-in function round> 2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0<built-in function round> 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:22:48)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quntidade * pedagio

aumento = gasto * (15/100) 

toatal = gasto + aumento

print(round(toatal, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
5102.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5171.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5308.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
568.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:29:45)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (15 // 100)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:51:37)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (1 + 15 / 100)

print(round(icms, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
File "XXXX", line 9
    print(round(icms, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
File "XXXX", line 9
    print(round(icms, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
File "XXXX", line 9
    print(round(icms, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
File "XXXX", line 9
    print(round(icms, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
File "XXXX", line 9
    print(round(icms, 2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:51:47)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (1 + 15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1090.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1030.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10150.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10269.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1060.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:52:03)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1089.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1029.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10149.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10268.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1059.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:52:00)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1089.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1029.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10149.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10268.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1059.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:54:51)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total (15 / 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    icms = total (15 / 100)
           ^^^^^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:52:24)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (1 + 15 // 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1090.4
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1030.8
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10150.0
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10269.2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1060.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:33:37)
-- CODE: 
quantidade = int(input('5'))

pedagio = 9.80 + 20.00

gasto = quantidade + pedagio

total = gasto * (1 + 15/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
537.72
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
535.42
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
540.02
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
544.62
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
536.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:55:03)
-- CODE: 
# Pedágio de uma Rodovia

# 1 Entrada
quantidade = int(input('5'))

# 2 Comando

# 2.1 Pedágio em cada peça 
pedagio = 9.80

# 2.2 Taxa fixa da manutenção das estradas
taxa = 20.00

# 2.3 Total gasto
gasto = (quantidade * pedagio) + 20.00

# 2.4 Almento de 15% do ICMS sobre o tatal gasto
total = gasto * (1 + 15/100)

# 3 Saída
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
556.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
534.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
579.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
545.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:29:46)
-- CODE: 
qunatidade = float(input('10.0'))

pedagio = 9.80 + 20.0

total = qunatidade + pedagio

icms = total + (15 // 100)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
10.0
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10.0
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10.0
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:52:23)
-- CODE: 
qunatidade = int(input('10'))

pedagio = 9.80 + 20.0

total = qunatidade * pedagio

icms = total + (1 + 15 // 100)

print(round(icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
1090.4
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
1030.8
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
10150.0
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
10269.2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
1060.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:04:48)
-- CODE: 
quntidade = int(input('5'))

pedagio = 9.80 + 20.00

total = quntidade * pedagio

aumento = total + (15/100)

print(round(aumento, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
589.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
529.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
5149.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
5268.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
559.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
